Revert "0.Downgrade java version to 1.8 (#112)"
This reverts commit 49d4edb5a4ec0154eb7b6af77e582dc92ade53ee.